<resources>
    <string name="app_name">Taco Pronto</string>
    <string name="company_address">123 Euclid Avenue</string>
    <string name="company_mobile_number">Phone:(562)850-6723</string>
    <string name="size">Size</string>
    <string name="tortilla">Tortilla</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="corn">Corn</string>
    <string name="flour">Flour</string>
    <string name="fillings">Fillings</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="white_fish">White Fish</string>
    <string name="cheese">Cheese</string>
    <string name="sea_food">Sea Food</string>
    <string name="rice">Rice</string>
    <string name="beans">Beans</string>
    <string name="pico_de_gallo">Pico de Gallo</string>
    <string name="guacomole">Guacamole</string>
    <string name="lbt">LBT</string>
    <string name="beverage">Beverage</string>
    <string name="soda">Soda</string>
    <string name="cerveza">Cerveza</string>
    <string name="margarita">Margarita</string>
    <string name="tequila">Tequila</string>
    <string name="place_order">Place Your Order</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="size_type_failure">Please select a size and type of tortilla!</string>
    <string name="size_failure">Please select a size!</string>
    <string name="type_failure">Please select the type of tortilla!</string>
    <string name="place_order_confirm">Yes, Place Order</string>
    <string name="fillings_confirm">Are you sure you don\'t want any fillings?</string>
    <string name="order_confirm">Your order has been placed!</string>
    <string name="order_failure">Your order could not be placed</string>
</resources>
