<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_table_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.tacopronto.MainActivity">
        <ImageView
            android:id="@+id/taco_image"
            android:layout_width="148dp"
            android:layout_height="99dp"
            android:layout_rowSpan="3"
            android:src="@drawable/tacos"/>
        <TextView
            android:id="@+id/company_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="28sp"
            />
        <TextView
            android:id="@+id/company_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/company_address"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/company_mobile_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/company_mobile_number"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/size"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/size"
            android:background="@drawable/rectangle"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_width="160dp" />

        <TextView
            android:id="@+id/tortilla"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="@string/tortilla"
            android:background="@drawable/rectangle"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_width="160dp" />

        <RadioGroup android:id="@+id/size_button_group">
            <RadioButton
                android:id="@+id/large_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/large"
                android:onClick="onRadioButtonClicked"
            />
            <RadioButton
                android:id="@+id/medium_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/medium"
                android:onClick="onRadioButtonClicked"
            />
        </RadioGroup>
    <RadioGroup android:id="@+id/tortilla_button_group">
        <RadioButton
            android:id="@+id/corn_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/corn"
            android:onClick="onRadioButtonClicked"
        />
        <RadioButton
            android:id="@+id/flour_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/flour"
            android:onClick="onRadioButtonClicked"
        />
    </RadioGroup>
    <TextView
        android:id="@+id/fillings"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/fillings"
        android:background="@drawable/rectangle"
        android:textSize="16sp"
        android:layout_columnSpan="2"
        android:textColor="@color/colorWhite"
        android:layout_width="320dp" />
    <CheckBox
        android:id="@+id/beef"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/beef"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/rice"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/rice"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/chicken"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/chicken"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/beans"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/beans"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/white_fish"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/white_fish"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/pico_de_gallo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/pico_de_gallo"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/cheese"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/cheese"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/guacomole"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/guacomole"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/seafood"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/sea_food"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/lbt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/lbt"
        android:onClick="onCheckBoxClick"
        />
    <TextView
        android:id="@+id/beverage"
        android:layout_height="30dp"
        android:layout_width="320dp"
        android:text="@string/beverage"
        android:gravity="center"
        android:background="@drawable/rectangle"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_columnSpan="2"
        />
    <CheckBox
        android:id="@+id/soda"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/soda"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/margarita"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/margarita"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/cerveza"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/cerveza"
        android:onClick="onCheckBoxClick"
        />
    <CheckBox
        android:id="@+id/tequila"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/tequila"
        android:onClick="onCheckBoxClick"
        />
    <Button
        android:id="@+id/place_order"
        android:text="@string/place_order"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:layout_marginLeft="95dp"
        android:onClick="onButtonClicked"
        android:layout_columnSpan="2"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:gravity="center"
        />
</GridLayout>
